--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,6 +40,11 @@ const metaTitle = `${SITE_TITLE} - ${title}`;
     src: url("../../public/fonts/lilitaone-regular.ttf");
   }
 
+  @font-face {
+    font-family: "Bangers";
+    src: url("../../public/fonts/Bangers-Regular.ttf");
+  }
+
   :root {
     --accent: 136, 58, 234;
     --accent-light: 224, 204, 250;
