feat: landing page version

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,7 @@
 ---
-import { EVENT_DATE, ADDRESS, SITE_ACRONYM } from "../consts";
+import { ADDRESS, SITE_ACRONYM } from "../consts";
 import { NAVIGATION_LINKS } from "../consts";
 import { getRelativeLocaleUrl } from "astro:i18n";
-import { displayDate } from "../utils";
 
 const locale = Astro.currentLocale!;
 const currentPath = Astro.url.pathname;
@@ -67,9 +66,8 @@ function isActiveLink(href: string): boolean {
     </div>
 
     <div class="navbar-end">
-      <div class="hidden lg:flex flex-col items-end mr-6 text-right border-r border-base-300/50 pr-6">
-        <span class="text-sm font-semibold text-base-content">{displayDate(EVENT_DATE, locale)}</span>
-        <span class="text-xs text-base-content/60 mt-0.5">{ADDRESS.addressLocality}</span>
+      <div class="hidden lg:flex items-end mr-6 text-right border-r border-base-300/50 pr-6">
+        <span class="text-xs text-base-content/60">{ADDRESS.addressLocality}</span>
       </div>
       <div class="flex gap-1.5">
         <a 
