--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -1,9 +1,8 @@
 ---
 import Header from "./Header.astro";
-import { NAVIGATION_LINKS, EVENT_DATE, ADDRESS } from "../consts";
+import { NAVIGATION_LINKS, ADDRESS } from "../consts";
 import Footer from "./Footer.astro";
 import { getRelativeLocaleUrl } from "astro:i18n";
-import { displayDate } from "../utils";
 
 const locale = Astro.currentLocale!;
 const currentPath = Astro.url.pathname;
@@ -43,7 +42,6 @@ function isActiveLink(href: string): boolean {
       <div class="p-6 border-b border-base-300/50">
         <img src="/ng-baguette-light-logo.svg" alt="NG Baguette Logo" class="h-10 w-auto mb-4">
         <div class="text-sm text-base-content/70">
-          <p class="font-semibold text-base-content">{displayDate(EVENT_DATE, locale)}</p>
           <p>{ADDRESS.addressLocality}, {ADDRESS.addressCountry}</p>
         </div>
       </div>
