refactor: remove inline padding from subscription form container

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -88,7 +88,7 @@ import {
                             </div>
                           </div>
                         </div>
-                        <div style="padding: 8px 0;">
+                        <div>
                           <div class="sib-form-block">
                             <button class="sib-form-block__button sib-form-block__button-with-loader btn btn-primary w-full md:w-auto whitespace-nowrap font-bold" form="sib-form" type="submit">
                               <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512" style="">
